# rustpractice

gpui-playground/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
gpui-playground/docs/: ARCHITECTURE.md  ASSETS.md  CHECKLIST.md  RELEASE.md
gpui-playground/scripts/: check-prereqs.sh
gpui-playground/src/: assets.rs  backend.rs  main.rs
gpui-playground/src/ui/: elements.rs  mod.rs  shell.rs  theme.rs
gpui-playground/src/ui/shell/: chat_panel.rs  left_panel.rs  render.rs  right_panel.rs
